--- a/JK/parallaxfinal-v1/index.html
+++ b/JK/parallaxfinal-v1/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
+
+<!-- tested with firefox : jennjkim.com/parallax-always not compatible for all browsers -->
+
 <html>
+
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
+
 <head>
           <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=no">
+          <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
           <style> body {padding: 0; margin: 0; } </style> 
            <script src="libraries/p5.js" type="text/javascript"></script>
             <script src="libraries/p5.dom.js" type="text/javascript"></script>
@@ -13,8 +21,7 @@
 
  <link rel="stylesheet" href="parallax-final.css">
 
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width">
+
 <title>JK</title>
 <style>
 
@@ -93,8 +100,6 @@
       </div>
       <div class="parallax__layer parallax__layer--base">
 
-      <h1><font size="12">&</font></h1>
-
       <img style="PADDING-LEFT: 600px" "PADDING-TOP: 100px" src="assets/lip.GIF" alt="lip">
 
 
@@ -105,7 +110,7 @@
       <div class="parallax__layer parallax__layer--base">
 
             <div id="exampleDisplay">
-            <center><iframe width="1200" height="800" frameBorder="0" id="exampleFrame" src="bgswap/bgswap.html" allowfullscreen></iframe></center>
+            <center><iframe width="1300" height="900" frameBorder="0" id="exampleFrame" src="bgswap/bgswap.html" allowfullscreen></iframe></center>
             <div class="edit_space">
             </div>
             <div id="exampleEditor"></div>
@@ -115,26 +120,6 @@
       </div>
     </div>
   </div>
-
-  <script>
-    var debugInput = document.querySelector("input");
-    function updateDebugState() {
-        document.body.classList.toggle('debug-on', debugInput.checked);
-    }
-    debugInput.addEventListener("click", updateDebugState);
-    updateDebugState();
-  </script>
-
-<script type="text/javascript">
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-10812217-1']);
-  _gaq.push(['_trackPageview']);
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-</script>
 
 
 
